--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,12 @@
 
     <TextView
         android:id="@+id/under_win_lose_text"
-        android:layout_width="278dp"
-        android:layout_height="104dp"
+        android:layout_width="327dp"
+        android:layout_height="98dp"
         android:layout_marginTop="8dp"
         android:fontFamily="monospace"
         android:gravity="center_horizontal"
-        android:text="Can you guess a number from 1 to 100?"
+        android:text="@string/can_you_guess_a_number_from_1_to_100"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/enter_number_field"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,7 +25,7 @@
         android:id="@+id/win_lose_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Take a challange!"
+        android:text="@string/take_a_challange"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/under_win_lose_text"
@@ -36,10 +36,10 @@
         app:layout_constraintVertical_chainStyle="packed" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/draw_num_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="@string/draw"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
@@ -51,7 +51,7 @@
         android:id="@+id/enter_num_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Enter number here:"
+        android:text="@string/enter_number_here"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,6 +71,7 @@
         app:layout_constraintHorizontal_bias="0.778"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.698" />
+        app:layout_constraintVertical_bias="0.698"
+        android:importantForAutofill="no" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
